# convert_hdf5

./: README.md  convert.py  pyproject.toml
src/hdf5converter/: __init__.py  converter.py
tests/: test_conversion.py
tests/testdata/: .gitignore  PyImarisWriterTest.ims
